--- a/res/conf/wedpad.conf
+++ b/res/conf/wedpad.conf
@@ -1,4 +1,7 @@
 
+[net]
+    listen = 127.0.0.1:8080
+
 [journal]
     # files dir to monitor
     dir = $HOME/.ed/journal
@@ -34,16 +37,10 @@
     # fast rotating body, in Hours
     max rotation period = 3.0
 
-[sounds]
-    alarm = $HOME/.local/share/edpad2/alarm.wav
-    beep = $HOME/.local/share/edpad2/beep.wav
-    click = $HOME/.local/share/edpad2/click.wav
-    drop = $HOME/.local/share/edpad2/drop.wav
-    note = $HOME/.local/share/edpad2/note.wav
-    ting = $HOME/.local/share/edpad2/ting.wav
-    tone = $HOME/.local/share/edpad2/tone.wav
-    twit = $HOME/.local/share/edpad2/twit.wav
-    warn = $HOME/.local/share/edpad2/warning.wav
-    warp = $HOME/.local/share/edpad2/warp.wav
+[paths]
+    page = page
+    sounds = $HOME/.local/share/wedpad/sound
+    #templates = $HOME/.local/share/edpad/templates
+    templates = templates
 
 
