--- a/res/conf/wedpad.conf
+++ b/res/conf/wedpad.conf
@@ -1,7 +1,9 @@
 
+# network settings
 [net]
     listen = :8080
 
+# ED journal dirs and files settings
 [journal]
     # journal logs dir to monitor
     dir = $HOME/.ed/journal
@@ -10,11 +12,23 @@
     # file mask to tail, first one (after sorting) will be tailed
     mask = 1Journal.*.[0-9]*.log
 
-[paths]
+# various resources locations 
+[resource]
     page = page
     sounds = $HOME/.local/share/wedpad/sound
-    #templates = $HOME/.local/share/edpad/templates
     templates = templates
-    lua = lua
 
+# remarkable object, events, etc options
+[criteria]
 
+    # need at least this number of signal present on bodies
+    # default is 0 (need any body)
+    min bio signals = 1
+    min geo signals = 3
+    min human signals = 1
+    min other signals = 1
+
+    # wide rings for stars and bodies (in Ls)
+    # defaults ar 0 (need any ring)
+    min star ring radius = 20
+    min body ring radius = 10
