--- a/res/conf/wedpad.conf
+++ b/res/conf/wedpad.conf
@@ -19,16 +19,54 @@
     templates = templates
 
 # remarkable object, events, etc options
+# note: the logic is OR, not AND
 [criteria]
 
     # need at least this number of signal present on bodies
-    # default is 0 (need any body)
+    # default: 0 (need any body)
     min bio signals = 1
     min geo signals = 3
     min human signals = 1
+    min guardian signals = 1
     min other signals = 1
 
-    # wide rings for stars and bodies (in Ls)
-    # defaults ar 0 (need any ring)
-    min star ring radius = 20
-    min body ring radius = 10
+    # interesting rings limits for bodies (in Ls)
+    # will trigger if the ring is wider than HIGH radius or narrower than LOW radius
+    # default: 0.0 (want any ring)
+    high ring radius = 10.0
+    low ring radius = 0.1
+
+    # ring thickness, in % TODO
+
+
+    # coma separated atmospheres we're interested in, wildcards are ok
+    # ex: thin helium*, neon rich*, water atmosphere, *oxygen*
+    # default: *
+    atmospheres = *oxygen*, *water*, *nitrogen*, *helium*
+    # apply atmosphere criteria to landable planets only?
+    # default: no
+    atmospheres landable only = yes
+
+    # match only discovered, mapped, terraformable or landable bodies
+    # default: no to all
+    discovered = no
+    mapped = no
+    terraformable = no
+    landable = no
+    
+    # min gravity that may interest us in (in G)
+    # will trigger if the gravity if higher than HIGH or lower than LOW value
+    # default: 0.0
+    high gravity = 2.5
+    low gravity = 0.01
+    # check the gravity on landable planets only?
+    # default: no
+    gravity landable only = true
+
+    # too small 
+
+    # always show bodies of these class
+    # coma separated list, wildcards are ok
+    # ex: *ammonia*, *water*, earthlike body, Helium rich*
+    # default: * (all bodies)
+    body class = ammonia world, water world, earthlike body, helium*
