--- a/res/conf/wedpad.conf
+++ b/res/conf/wedpad.conf
@@ -14,9 +14,14 @@
 
 # various resources locations 
 [resource]
-    page = page
-    sounds = $HOME/.local/share/wedpad/sound
-    templates = templates
+    # dir with html, css, etc stuff
+    webpage = webpage/
+    # sound files (.wav) dir
+    sounds = $HOME/.local/share/wedpad/sound/
+    # html templates dir
+    templates = templates/
+    # dir with varios data files (bios, for example)
+    data = data/
 
 # remarkable object, events, etc options
 # note: the logic is OR, not AND
