--- a/res/conf/wedpad.conf
+++ b/res/conf/wedpad.conf
@@ -10,7 +10,7 @@
     # sort dir files mode (asc or desc)
     sort = asc
     # file mask to tail, first one (after sorting) will be tailed
-    log mask = Journal.*.[0-9]*.log
+    log mask = 1Journal.*.[0-9]*.log
     # status file name
     status = Status.json
 
