--- a/res/conf/wedpad.conf
+++ b/res/conf/wedpad.conf
@@ -10,7 +10,7 @@
     # sort dir files mode (asc or desc)
     sort = asc
     # file mask to tail, first one (after sorting) will be tailed
-    log mask = 1Journal.*.[0-9]*.log
+    log mask = Journal.*.[0-9]*.log
     # status file name
     status = Status.json
 
@@ -32,7 +32,7 @@
     # need at least this number of signal present on bodies
     # default: 0 (need any body)
     min bio signals = 1
-    min geo signals = 3
+    min geo signals = 4
     min human signals = 1
     min guardian signals = 1
     min other signals = 1
