--- a/res/conf/wedpad.conf
+++ b/res/conf/wedpad.conf
@@ -27,6 +27,7 @@
 
 # remarkable object, events, etc options
 # note: the logic is OR, not AND
+# note2: no value correctness checks, do not put garbage
 [criteria]
 
     # need at least this number of signal present on bodies
@@ -77,3 +78,18 @@
     # ex: *ammonia*, *water*, earthlike body, Helium rich*
     # default: * (all bodies)
     body class = ammonia world, water world, earthlike body, helium*
+
+    # max body rotation period we may look at (in Hours)
+    # default: 1
+    body rotation period = 3
+
+    # close bodies criteris: body SemiMajorAxis to its Radius ratio must be
+    # less then this to consider two bodies are close
+    # default: 3.0
+    close bodies ratio = 5.0
+
+    # hot planet: planet SemiMajorAxis to Parent Star Radius ratio must be
+    # less then this to consider a planet is close enough to its star to be hot
+    # default: 2.0
+    hot planet ratio = 2.0
+    
