sounds, close rings

--- a/res/conf/wedpad.conf
+++ b/res/conf/wedpad.conf
@@ -10,7 +10,7 @@
     # sort dir files mode (asc or desc)
     sort = asc
     # file mask to tail, first one (after sorting) will be tailed
-    log mask = Journal.*.[0-9]*.log
+    log mask = 1Journal.*.[0-9]*.log
     # status file name
     status = Status.json
 
@@ -18,8 +18,8 @@
 [resource]
     # dir with html, css, etc stuff
     webpage = webpage/
-    # sound files (.wav) dir
-    sounds = $HOME/.local/share/wedpad/sound/
+    # sound files ( .wav, 44.1 kHz) dir
+    sounds = $HOME/.local/share/wedpad/sounds/
     # html templates dir
     templates = templates/
     # dir with varios data files (bios, for example)
@@ -43,9 +43,6 @@
     # default: 0.0 (want any ring)
     high ring radius = 10.0
     low ring radius = 0.1
-
-    # ring thickness, in % TODO
-
 
     # coma separated atmospheres we're interested in, wildcards are ok
     # ex: thin helium*, neon rich*, water atmosphere, *oxygen*
@@ -92,4 +89,4 @@
     # less then this to consider a planet is close enough to its star to be hot
     # default: 2.0
     hot planet ratio = 2.0
-    
+
