--- a/res/conf/wedpad.conf
+++ b/res/conf/wedpad.conf
@@ -39,10 +39,9 @@
     min other signals = 1
 
     # interesting rings limits for bodies (in Ls)
-    # will trigger if the ring is wider than HIGH radius or narrower than LOW radius
-    # default: 0.0 (want any ring)
-    high ring radius = 10.0
-    low ring radius = 0.1
+    # will trigger if the ring is wider than HIGH radius
+    # default: 10.0
+    min ring radius = 10.0
 
     # coma separated atmospheres we're interested in, wildcards are ok
     # ex: thin helium*, neon rich*, water atmosphere, *oxygen*
@@ -89,4 +88,8 @@
     # less then this to consider a planet is close enough to its star to be hot
     # default: 2.0
     hot planet ratio = 2.0
+
+    # min GG helium level we should notice (percents)
+    # default: 29.0
+    min helium level = 29.0
 
