--- a/res/conf/wedpad.conf
+++ b/res/conf/wedpad.conf
@@ -10,7 +10,7 @@
     # sort dir files mode (asc or desc)
     sort = asc
     # file mask to tail, first one (after sorting) will be tailed
-    log mask = 1Journal.*.[0-9]*.log
+    log mask = Journal.*.[0-9]*.log
     # status file name
     status = Status.json
 
@@ -37,6 +37,10 @@
     min human signals = 1
     min guardian signals = 1
     min other signals = 1
+
+    # minimal bio value we might be interested in (in mills)
+    # default: 0.0
+    min bio value = 5.0
 
     # interesting rings limits for bodies (in Ls)
     # will trigger if the ring is wider than HIGH radius
