installation; licence update

--- a/conf/wedpad.conf
+++ b/conf/wedpad.conf
@@ -15,15 +15,15 @@
     status = Status.json
 
 # various resources locations 
-[resource]
+[resources]
     # dir with html, css, etc stuff
-    webpage = webpage/
+    webpage = $HOME/.local/share/wedpad/webpage/
     # sound files ( .wav, 44.1 kHz) dir
     sounds = $HOME/.local/share/wedpad/sounds/
     # html templates dir
-    templates = templates/
+    templates = $HOME/.local/share/wedpad/templates/
     # dir with varios data files (bios, for example)
-    data = data/
+    data = $HOME/.local/share/wedpad/data/
 
 # remarkable object, events, etc options
 # note: the logic is OR, not AND
@@ -95,5 +95,5 @@
 
     # min GG helium level we should notice (percents)
     # default: 29.0
-    min helium level = 29.0
+    min helium level = 30.0
 
