navroute added, files load fixed

--- a/conf/wedpad.conf
+++ b/conf/wedpad.conf
@@ -13,6 +13,8 @@
     log mask = Journal.*.[0-9]*.log
     # status file name
     status = Status.json
+    # navigation routes file name
+    navroute = NavRoute.json
 
 # various resources locations 
 [resources]
