--- a/conf/wedpad.conf
+++ b/conf/wedpad.conf
@@ -83,12 +83,12 @@
 
     # max body rotation period we may look at (in Hours)
     # default: 1
-    body rotation period = 3
+    body rotation period = 3.0
 
     # close bodies criteris: body SemiMajorAxis to its Radius ratio must be
     # less then this to consider two bodies are close
     # default: 3.0
-    close bodies ratio = 3.0
+    close bodies ratio = 2.0
 
     # hot planet: planet SemiMajorAxis to Parent Star Radius ratio must be
     # less then this to consider a planet is close enough to its star to be hot
@@ -99,3 +99,10 @@
     # default: 29.0
     min helium level = 30.0
 
+    # bodies with min inclination, 0 to 90 unsigned (deg)
+    # default: 89.0
+    min body inclination = 60.0
+
+    # min body eccentricity, 0.0 to 1.0
+    # default: 0.8
+    min body eccentricity = 0.8
