lowered sound level; bio data fix; cosmetics

--- a/conf/wedpad.conf
+++ b/conf/wedpad.conf
@@ -45,7 +45,7 @@
     min bio value = 5.0
 
     # interesting rings limits for bodies (in Ls)
-    # will trigger if the ring is wider than HIGH radius
+    # will trigger if the ring is wider than this radius
     # default: 10.0
     min ring radius = 10.0
 
@@ -65,10 +65,10 @@
     landable = no
     
     # min gravity that may interest us in (in G)
-    # will trigger if the gravity if higher than HIGH or lower than LOW value
-    # default: 0.0
-    high gravity = 3.0
-    low gravity = 0.01
+    # will trigger if the gravity if higher than this value
+    # default: 3.0
+    min gravity = 3.0
+
     # check the gravity on landable planets only?
     # default: no
     gravity landable only = true
@@ -99,10 +99,10 @@
     # default: 29.0
     min helium level = 30.0
 
-    # bodies with min inclination, 0 to 90 unsigned (deg)
+    # min body orbit inclination to notice, 0 to 90 unsigned (deg)
     # default: 89.0
     min body inclination = 60.0
 
-    # min body eccentricity, 0.0 to 1.0
+    # min body orbit eccentricity to notice, 0.0 to 1.0
     # default: 0.8
     min body eccentricity = 0.8
