--- a/conf/wedpad.conf
+++ b/conf/wedpad.conf
@@ -106,3 +106,6 @@
     # min body orbit eccentricity to notice, 0.0 to 1.0
     # default: 0.8
     min body eccentricity = 0.8
+
+[EDSM]
+    systems url = https://www.edsm.net/api-v1/system
